替换原始版jsoncpp

--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
@@ -166,7 +166,7 @@
       <Filter>Header Files\libBCH</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\libBCH\libBCH.hpp">
-      <Filter>Header Files\libBTC</Filter>
+      <Filter>Header Files\libBCH</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
