Apple clang 7.3.0 complete . In MacOS hid_open can call only one time , before another call ,must close,different from Windows and Ubuntu.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,6 +41,8 @@ add_executable(JUB_test "JUB_SDK_test/JUB_SDK_test.cpp" ${SRC_LIST})
 #user lib
 if(msvc)
     target_link_libraries(JUB_test PRIVATE JUB_SDK ${HID_API_LIBRARY} Setupapi)
+elseif(APPLE)
+    target_link_libraries(JUB_test PRIVATE JUB_SDK hidapi)
 else()
     target_link_libraries(JUB_test PRIVATE JUB_SDK hidapi-hidraw)  
 endif(msvc)
