--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,7 +42,10 @@ add_executable(JUB_test "JUB_SDK_test/JUB_SDK_test.cpp" ${SRC_LIST})
 if(msvc)
     target_link_libraries(JUB_test PRIVATE JUB_SDK ${HID_API_LIBRARY} Setupapi)
 elseif(APPLE)
-    target_link_libraries(JUB_test PRIVATE JUB_SDK hidapi)
+    FIND_LIBRARY(HID_API_LIB_MAC_STATIC
+        NAMES libhidapi.a
+    )
+    target_link_libraries(JUB_test PRIVATE JUB_SDK ${HID_API_LIB_MAC_STATIC}  "-framework CoreFoundation" "-framework IOKit")
 else()
     target_link_libraries(JUB_test PRIVATE JUB_SDK hidapi-hidraw)  
 endif(msvc)
