add libsub monitor test code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(JubSDK VERSION 0.1.0)
 set (CMAKE_CXX_STANDARD 11)
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(monitor)
 
 
