修改头文件严格按c语言来

--- a/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj
+++ b/builds/windows/Jub_SDK/test/JUB_SDK_test.vcxproj
@@ -152,7 +152,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)\x64\Release;$(SolutionDir)..\..\..\deps\hidapi\libhidapi\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Jub_SDK.lib;hidapi.lib;Setupapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Jub_SDK.lib;hidapi_vs2017.lib;Setupapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
