--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -156,9 +156,6 @@
     <ClInclude Include="..\..\..\..\include\context\ContextETH.h">
       <Filter>Header Files\context</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\libETH\ByteConverter.h">
-      <Filter>Header Files\libETH</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\include\libETH\ERC20Abi.h">
       <Filter>Header Files\libETH</Filter>
     </ClInclude>
@@ -244,9 +241,6 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\context\ContextETH.cpp">
       <Filter>Source Files\context</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\src\libETH\ByteConverter.cpp">
-      <Filter>Source Files\libETH</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\libETH\ERC20Abi.cpp">
       <Filter>Source Files\libETH</Filter>
