--- a/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
+++ b/builds/windows/Jub_SDK/Jub_SDK/Jub_SDK.vcxproj.filters
@@ -40,9 +40,6 @@
     <Filter Include="deps\polarssl">
       <UniqueIdentifier>{56cb9b09-6f4e-4831-bf86-79527bcd3377}</UniqueIdentifier>
     </Filter>
-    <Filter Include="deps\base58">
-      <UniqueIdentifier>{0c52c268-4d07-481d-9946-9ab366daa087}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\utility">
       <UniqueIdentifier>{426ad477-8275-4fcf-a2f5-7a1bcfc5a387}</UniqueIdentifier>
     </Filter>
@@ -58,8 +55,35 @@
     <Filter Include="Header Files\libBCH">
       <UniqueIdentifier>{3036bf01-72ff-4f32-abc8-5ac392a1174e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\libBCH">
-      <UniqueIdentifier>{a825574e-98d6-4181-bd1e-02c17b1a8a89}</UniqueIdentifier>
+    <Filter Include="deps\bitcoin">
+      <UniqueIdentifier>{68f1fb04-6c8a-423e-a5a8-f150fae435ba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\bitcoinABC">
+      <UniqueIdentifier>{e99acf75-bbac-4f15-85d1-36019a815603}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\mSIGNA">
+      <UniqueIdentifier>{300e8a3c-b7d1-40a4-ac1f-2e60849c235e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\mSIGNA\stdutils">
+      <UniqueIdentifier>{d2d9dc2a-3785-4914-94dd-1fc13db3aaa1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\bigint">
+      <UniqueIdentifier>{0c52c268-4d07-481d-9946-9ab366daa087}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\bitcoin\compat">
+      <UniqueIdentifier>{55919a36-07ee-422b-9f4d-c78f744221e3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\libbitcoin">
+      <UniqueIdentifier>{f762187f-e2e5-44a7-8e5a-81d9861d22c2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\libbitcoin\machine">
+      <UniqueIdentifier>{ee0a82ac-c39d-42d3-8aab-a09bbfaa670b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\utility">
+      <UniqueIdentifier>{f8b96ea8-ffe6-4c0e-ae0f-9ab227daf0e5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\hidapi">
+      <UniqueIdentifier>{5231c9d7-bbb0-4b17-bc85-3aba336053f2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -83,15 +107,6 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\libBTC\libBTC.hpp">
       <Filter>Header Files\libBTC</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\deps\libbitcoin\formats\base58.h">
-      <Filter>deps\base58</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\deps\libbitcoin\formats\bech32.h">
-      <Filter>deps\base58</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\..\deps\libbitcoin\formats\hash.h">
-      <Filter>deps\base58</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\deps\polarssl\check_config.h">
       <Filter>deps\polarssl</Filter>
@@ -132,9 +147,6 @@
     <ClInclude Include="..\..\..\..\include\utility\xManager.hpp">
       <Filter>Header Files\context</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\device\JubiterBLEDevice.hpp">
-      <Filter>Header Files\device</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\include\device\Fido.h">
       <Filter>Header Files\device</Filter>
     </ClInclude>
@@ -159,14 +171,65 @@
     <ClInclude Include="..\..\..\..\include\libETH\ERC20Abi.h">
       <Filter>Header Files\libETH</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\deps\bitcoinABC\cashaddr.h">
-      <Filter>Header Files\libBCH</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\include\libBCH\libBCH.hpp">
       <Filter>Header Files\libBCH</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\device\DeviceIOLogHelper.hpp">
       <Filter>Header Files\device</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bigint\BigInteger.hh">
+      <Filter>deps\bigint</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bigint\BigIntegerAlgorithms.hh">
+      <Filter>deps\bigint</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bigint\BigIntegerLibrary.hh">
+      <Filter>deps\bigint</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bigint\BigIntegerUtils.hh">
+      <Filter>deps\bigint</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bigint\BigUnsigned.hh">
+      <Filter>deps\bigint</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bigint\BigUnsignedInABase.hh">
+      <Filter>deps\bigint</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bigint\NumberlikeArray.hh">
+      <Filter>deps\bigint</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bitcoinABC\cashaddr.h">
+      <Filter>deps\bitcoinABC</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\mSIGNA\stdutils\uchar_vector.h">
+      <Filter>deps\mSIGNA\stdutils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bitcoin\base58.h">
+      <Filter>deps\bitcoin</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bitcoin\bech32.h">
+      <Filter>deps\bitcoin</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bitcoin\hash.h">
+      <Filter>deps\bitcoin</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bitcoin\compat\byteswap.h">
+      <Filter>deps\bitcoin\compat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\bitcoin\compat\endian.h">
+      <Filter>deps\bitcoin\compat</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\deps\libbitcoin\machine\opcode.hpp">
+      <Filter>deps\libbitcoin\machine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\utility\Apdu.hpp">
+      <Filter>Header Files\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\utility\Singleton.h">
+      <Filter>Header Files\utility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\include\utility\util.h">
+      <Filter>Header Files\utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -181,12 +244,6 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\context\ContextBTC.cpp">
       <Filter>Source Files\context</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\deps\libbitcoin\formats\base58.cpp">
-      <Filter>deps\base58</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\deps\libbitcoin\formats\bech32.cpp">
-      <Filter>deps\base58</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\deps\polarssl\md.c">
       <Filter>deps\polarssl</Filter>
@@ -221,9 +278,6 @@
     <ClCompile Include="..\..\..\..\src\utility\util.cpp">
       <Filter>Source Files\utility</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\device\JubiterBLEDevice.cpp">
-      <Filter>Source Files\device</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\src\device\Fido.cpp">
       <Filter>Source Files\device</Filter>
     </ClCompile>
@@ -245,8 +299,34 @@
     <ClCompile Include="..\..\..\..\src\libETH\ERC20Abi.cpp">
       <Filter>Source Files\libETH</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\deps\bitcoinABC\cashaddr.cc">
-      <Filter>Source Files\libBCH</Filter>
+    <ClCompile Include="..\..\..\..\deps\bitcoin\base58.cpp">
+      <Filter>deps\bitcoin</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\bitcoin\bech32.cpp">
+      <Filter>deps\bitcoin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\bigint\BigInteger.cc">
+      <Filter>deps\bigint</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\bigint\BigIntegerAlgorithms.cc">
+      <Filter>deps\bigint</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\bigint\BigIntegerUtils.cc">
+      <Filter>deps\bigint</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\bigint\BigUnsigned.cc">
+      <Filter>deps\bigint</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\bigint\BigUnsignedInABase.cc">
+      <Filter>deps\bigint</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\deps\bitcoinABC\cashaddr.cc">
+      <Filter>deps\bitcoinABC</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="..\..\..\..\deps\hidapi\libhidapi\x64\hidapi_vs2017.lib">
+      <Filter>deps\hidapi</Filter>
+    </Library>
   </ItemGroup>
 </Project>
