--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,13 +5,18 @@ aux_source_directory(${CMAKE_SOURCE_DIR}/src/utility SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/context SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/device SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/libETH SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/src/libBCH SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/src/token SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/deps/formats SRC_LIST)
+aux_source_directory(${CMAKE_SOURCE_DIR}/deps/bigint SRC_LIST)
+aux_source_directory(${CMAKE_SOURCE_DIR}/deps/bitcoin SRC_LIST)
+aux_source_directory(${CMAKE_SOURCE_DIR}/deps/bitcoinABC SRC_LIST)
 aux_source_directory(${CMAKE_SOURCE_DIR}/deps/polarssl SRC_LIST)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_SOURCE_DIR}/deps)
+include_directories(${CMAKE_SOURCE_DIR}/deps/bigint)
+include_directories(${CMAKE_SOURCE_DIR}/deps/bitcoin)
+include_directories(${CMAKE_SOURCE_DIR}/deps/bitcoinABC)
+include_directories(${CMAKE_SOURCE_DIR}/deps/libbitcoin)
 
 
 ADD_LIBRARY(JUB_SDK STATIC ${SRC_LIST})
