--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,22 +1,22 @@
 cmake_minimum_required(VERSION 3.0.0)
 
-aux_source_directory(${CMAKE_SOURCE_DIR}/src SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/src/utility SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/src/context SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/src/device SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/src/libETH SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/src/token SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/deps/bigint SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/deps/bitcoin SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/deps/bitcoinABC SRC_LIST)
-aux_source_directory(${CMAKE_SOURCE_DIR}/deps/polarssl SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/utility SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/context SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/device SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libETH SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/token SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bigint SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoinABC SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/polarssl SRC_LIST)
 
-include_directories(${CMAKE_SOURCE_DIR}/include)
-include_directories(${CMAKE_SOURCE_DIR}/deps)
-include_directories(${CMAKE_SOURCE_DIR}/deps/bigint)
-include_directories(${CMAKE_SOURCE_DIR}/deps/bitcoin)
-include_directories(${CMAKE_SOURCE_DIR}/deps/bitcoinABC)
-include_directories(${CMAKE_SOURCE_DIR}/deps/libbitcoin)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bigint)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoinABC)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../deps/libbitcoin)
 
 
 ADD_LIBRARY(JUB_SDK STATIC ${SRC_LIST})
